Add new Core Data model version

--- a/shirkers-challenge/shirkers-challenge/Resources/pt-BR.lproj/Localizable.strings
+++ b/shirkers-challenge/shirkers-challenge/Resources/pt-BR.lproj/Localizable.strings
@@ -23,4 +23,5 @@
 "themes" = "Temas";
 "about" = "Sobre";
 "default-theme" = "Padrão";
+"pastel-theme" = "Pastel";
 "privacy" = "Política de Privacidade";
